horizontal scroll bar was showing up, not sure what changed but fixed now

--- a/less/index.less
+++ b/less/index.less
@@ -94,7 +94,7 @@ html, body {
 	border-left: 1px solid @color1;
 	border-right: 1px solid @color1;
 	//.border(red);
-	nav.main-nav {
+	.main-nav {
 		.flex(row, space-around, center);
 		width: 100%;
 		.spaceTop;
